# decklink-opencv-zmq-cpp2py

./: .gitignore  CMakeLists.txt  README.md  build.sh
cpp/include/: Capture.h  Config.h
cpp/src/: Capture.cpp
include/: Config_ryokomy.h
py/: subscriber.py
src/: Capture.cpp  Config.cpp  pub.cpp
